Apache Tez Change Log
=====================

Release 0.7.1: Unreleased

INCOMPATIBLE CHANGES
  TEZ-2679. Admin forms of launch env settings

ALL CHANGES
  TEZ-2940. Invalid shuffle max slow start setting causes vertex to hang indefinitely
  TEZ-2930. Tez UI: Parent controller is not polling at times
  TEZ-1670. Add tests for all converter functions in HistoryEventTimelineConversion.
  TEZ-2929. Tez UI: Dag details page displays vertices to be running even when dag have completed
  TEZ-2927. Tez UI: Graciously fail when system-metrics-publisher is disabled
  TEZ-2915. Tez UI: Getting back to the DAG details page is difficult
  TEZ-2895. Tez UI: Add option to enable and disable in-progress
  TEZ-2894. Tez UI: Disable sorting for few columns while in progress. Display an alert on trying to sort them
  TEZ-2893. Tez UI: Retain vertex info displayed in DAG details page even after completion
  TEZ-2878. Tez UI: AM error handling - Make the UI handle cases in which AM returns unexpected/no data
  TEZ-2922. Tez Live UI gives access denied for admins
  TEZ-2828. Fix typo in "Shuffle assigned " log statement in shuffle.orderedgrouped.Shuffle.
  TEZ-2909. Tez UI: Application link in All DAGs table is disable when applicationhistory is unavailable
  TEZ-2553. Tez UI: Tez UI Nits
  TEZ-2900. Ignore V_INPUT_DATA_INFORMATION when vertex is in Failed/Killed/Error
  TEZ-2904. Pig can't specify task specific command opts
  TEZ-2899. Tez UI: DAG getting created with huge horizontal gap in between vertices
  TEZ-2882. Consider improving fetch failure handling
  TEZ-2907. NPE in IFile.Reader.getLength during final merge operation
  TEZ-2850. Tez MergeManager OOM for small Map Outputs
  TEZ-2886. Ability to merge AM credentials with DAG credentials.
  TEZ-2896. Fix thread names used during Input/Output initialization.
  TEZ-2866. Tez UI: Newly added columns wont be displayed by default in tables
  TEZ-2885. Remove counter logs from AMWebController.